
name:           modulo
version:        0.5
cabal-version:  >= 0.14
build-type:     Simple
author:         Hans Hoglund
synopsis:       Modular C code generator
category:       Language, FFI
tested-with:    GHC


description: 
    Modulo is a tool that generates modular, standard C interfaces based on a high-level 
    description language. The idea is to specify functionality in the module language 
    and implement it in any language that supports C-style calling conventions. 
    
    Extensions will be able to generate language bindings for various languages
    including Haskell and Common Lisp.
    
    See also Typo.

library                    
    build-depends: 
        base, semigroups, data-default,
        parsec >= 3.1.2, prettify >= 0.5,
        language-c, haskell-src, atto-lisp
    hs-source-dirs: src
    exposed-modules:
        Language.Modulo
        Language.Modulo.C
        Language.Modulo.Haskell
        Language.Modulo.Lisp
        Language.Modulo.Parser
        Language.Modulo.Util

executable "modulo"
    hs-source-dirs: src
    main-is: Main.hs
    