
name:           modulo
version:        0.5
cabal-version:  >= 0.14
build-type:     Simple
author:         Hans Hoglund
synopsis:       Modular C code generator
category:       Language, FFI
tested-with:    GHC


description: 
    Modulo is a tool that generates modular, standard C interfaces based on a high-level 
    description language. The idea is to specify functionality in the module language 
    and implement it in any language that supports C-style calling conventions. 
    
    This package include generators for C, JavaScript, Haskell and Common Lisp.

library                    
    build-depends: 
        base, semigroups, data-default,
        text, parsec >= 3.1.2, prettify >= 0.5,
        language-c, haskell-src, atto-lisp
    hs-source-dirs: src
    exposed-modules:
        Language.Modulo

        Language.Modulo.C
        Language.Modulo.Lisp
        Language.Modulo.Haskell
        Language.Modulo.JavaScript

        Language.Modulo.Load
        Language.Modulo.Parse
        Language.Modulo.Util
        Language.Modulo.Util.Mangle
        Language.Modulo.Util.Unmangle

executable "modulo"
    hs-source-dirs: src
    main-is: Main.hs
    